ansbile.cfg: nocows=true

--- a/production/ansible.cfg
+++ b/production/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-force_color = 1
+force_color = true
+nocows = true
 gathering = smart
 fact_caching = jsonfile
 fact_caching_connection = production/tmp/cache/fact
