ansible.cfg: retry_files_enabled=false

--- a/production/ansible.cfg
+++ b/production/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
-force_color = true
-nocows = true
-gathering = smart
-fact_caching = jsonfile
-fact_caching_connection = production/tmp/cache/fact
-fact_caching_timeout = 3600
-
+force_color=			true
+nocows=				true
+retry_files_enabled=		false
+gathering=			smart
+fact_caching=			jsonfile
+fact_caching_connection=	production/tmp/cache/fact
+fact_caching_timeout=		3600
