inventory: Add pi.lan.sfo.jp

--- a/production/inventory.ini
+++ b/production/inventory.ini
@@ -1,3 +1,14 @@
+#pi.lan.sfo.jp ansible_host=172.31.0.2
+
 [desktop]
 localhost
+
+[rsyslog-server]
+pi.lan.sfo.jp
+
+[isc-dhcp-server]
+pi.lan.sfo.jp
+
+[powerdns-recursor]
+pi.lan.sfo.jp
 
